force-app/src/objects/cpm__Payment_Journey_Step__c.object
<CustomObject>
    <fields>
        <fullName>cpm__Failure_Reason__c</fullName>
        <label>Failure Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Installment__c</fullName>
        <label>Installment</label>
        <referenceTo>cpm__Installment__c</referenceTo>
        <relationshipLabel>Payment Journey Steps</relationshipLabel>
        <relationshipName>Payment_Journey_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Journey_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Journey Rule</label>
        <referenceTo>cpm__Payment_Journey_Rule__c</referenceTo>
        <relationshipLabel>Payment Journey Steps</relationshipLabel>
        <relationshipName>Payment_Journey_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Journey_Step_Sweep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Journey Step Sweep</label>
        <referenceTo>cpm__Payment_Journey_Step_Sweep__c</referenceTo>
        <relationshipLabel>Payment Journey Steps</relationshipLabel>
        <relationshipName>Payment_Journey_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Run_Date__c</fullName>
        <label>Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment Journey Step</label>
    <nameField>
        <displayFormat>PAR-{0}</displayFormat>
        <label>Payment Journey Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Journey Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>